Fixed jumping background on mobile
Fixed jumping background on mobile

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -58,10 +58,6 @@ a {
   }
 }
 
-h3 {
-  // font-weight: bold;
-}
-
 .team-name {
   display: flex;
   justify-content: center;
@@ -106,6 +102,9 @@ h3 {
 }
 
 @media (min-width: 1200px) {
+  body {
+    background-attachment: fixed !important;
+  }
   #__nuxt {
     max-width: 60vw;
   }
